# MyGomoku

./: CMakeLists.txt  README.md
Utils/: gomoku.h  my_socket.h
client/: server.cpp
